<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triple Solitaire</string>
    <string name="sign_in_explanation">Sign to save your stats and keep them synchronized across all your devices.</string>
    <string name="time">Time:</string>
    <string name="move_count">Moves:</string>
    <string name="undo">Undo</string>
    <string name="new_game">New Game</string>
    <string name="win_dialog">You won in %1$s and %2$d moves!</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="quit_title">Quit Triple Solitaire?</string>
    <string name="quit_message">You will lose all progress when you quit. Use the Home button to temporarily save your progress.</string>
    <string name="quit_positive">Quit</string>
    <string name="quit_negative">Cancel</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="description">Three deck variation of the classic three turn Solitaire, built specifically for tablets.</string>
    <string name="project">For issues or more information:</string>
    <string name="project_link">http://dft.ba/-TripleSolitaire</string>
    <string name="created_by_label">Created by:</string>
    <string name="creator">Ian Lake</string>
    <string name="separator">:</string>
    <string name="creator_link">https://github.com/ianhanniballake</string>
    <string name="graphics_and_testing_by_label">Graphics and Testing by:</string>
    <string name="artist_and_tester">Andrea Lake</string>
    <string name="artist_and_tester_link">http://kamiawolf.deviantart.com</string>
    <string name="stats">Statistics</string>
    <string name="reset">Reset All Statistics</string>
    <string name="reset_dialog_title">Reset Statistics Confirmation</string>
    <string name="reset_dialog_message">Are you sure you want to reset all statistics? Note that this will start a new game, removing any progress so far.</string>
    <string name="reset_dialog_confirm">Yes</string>
    <string name="reset_dialog_cancel">Cancel</string>
    <string name="stats_games_played">Games Played</string>
    <string name="stats_games_won">Games Won</string>
    <string name="stats_win_percentage">Win Percentage</string>
    <string name="stats_average_duration">Average Time Per Game</string>
    <string name="stats_average_moves">Average Moves Per Game</string>
    <string name="stats_na">N/A</string>
    <string name="pref_game_play_title">Game Play</string>
    <string name="pref_game_play_summary">Settings affecting game play</string>
    <string name="pref_auto_play_category">Auto Play Preferences</string>
    <string name="pref_auto_play_default">never</string>
    <string name="pref_auto_play_title">Auto Play Mode</string>
    <string name="pref_auto_play_dialog_title">Choose Auto Play Mode</string>
    <string name="pref_auto_flip_title">Auto Flip</string>
    <string name="pref_auto_flip_summary">Whether face down cards should automatically flip over when uncovered</string>
    <string name="pref_animation_title">Animation</string>
    <string name="pref_animation_summary">Control animations</string>
    <string name="pref_animation_category">Animation</string>
    <string name="pref_animate_auto_play_title">Animate Auto Play</string>
    <string name="pref_animate_auto_play_summary">Whether auto play moves should be animated</string>
    <string name="pref_animate_undo_title">Animate Undo</string>
    <string name="pref_animate_undo_summary">Whether undo moves should be animated</string>
    <string name="pref_animation_speed_category">Animation Speed</string>
    <string name="pref_animation_speed_auto_play_default">325</string>
    <string name="pref_animation_speed_auto_play_title">Auto Play Animation Speed</string>
    <string name="pref_animation_speed_auto_play_dialog_title">Choose Auto Play Animation Speed</string>
    <string name="pref_animation_speed_undo_default">100</string>
    <string name="pref_animation_speed_undo_title">Undo Animation Speed</string>
    <string name="pref_animation_speed_undo_dialog_title">Choose Undo Animation Speed</string>

</resources>